Добавлено оформление страницы аутентификации

--- a/public/authentication.html
+++ b/public/authentication.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Аутентификация</title>
+        <link href="/css/auth.css" rel="stylesheet" type="text/css" />
         <script src = "/js/auth.js"></script>
     </head>
     <body>
         <div class="authBlock">
-            <label for="uname"><b> </b></label>
+            <label for="uname"><b>Username</b></label>
             <input type="text" placeholder="Enter Username" name="username" id="username" required>
 
             <label for="psw"><b>Password</b></label>
